# EjabberdHTTPAuthAdapterCPP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  auth.conf  auth_http  auth_http.conf  input.txt  test.sh
inc/: AuthHTTP.h  ConfigReader.h  FileWrapper.h  HttpCommandExecutor.h  StreamRedirector.h
src/: AuthHTTP.cpp  ConfigReader.cpp  FileWrapper.cpp  HttpCommandExecutor.cpp  StreamRedirector.cpp  main.cpp
tests/: http_test_server.py  input.txt  output.txt  request.txt
